--- a/index.html
+++ b/index.html
@@ -6,18 +6,26 @@
     <meta name="description" content="Hotel Campo Largo | Sempre sendo a melhor escolha!">
     <title>Hotel Paraíso das Águas</title>
     <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
     <header>
         <nav>
-            <h1>Hotel Paraíso das Águas</h1>
-
-            <div>
-                <a href="#sobre">Sobre</a>
-                <a href="#location">Localização</a>
-                <a href="#">Faça a sua Reserva</a>
-                <a href="#">Junte-se</a>
+            <div class="nav-logo">
+                <h1>Hotel Paraíso das Águas</h1>
             </div>
+            
+            <div class="menu-icon">
+                <i class="fas fa-bars"></i>
+            </div>
+            
+            <div class="nav-links">
+                <a href="#sobre">Sobre</a>
+                <a href="#localizacao">Localização</a>
+                <a href="#reserva">Faça a sua Reserva</a>
+                <a href="#contato">Contato</a>
+            </div>
+
         </nav>
     </header>
 
@@ -52,7 +60,7 @@
                 </div>
             </div>
         </section>
-        <section class="location" id="location">
+        <section class="location" id="localizacao">
             <div class="location-text">
                 <h2>Localização Privilegiada</h2>
                 <p>Situado em uma localização privilegiada, o Hotel Paraíso das Águas está próximo das principais atrações turísticas, centros de compras e áreas de negócios da cidade, proporcionando facilidade de acesso para todos os hóspedes.</p>      
