--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Hotel Campo Largo | Sempre sendo a melhor escolha!">
+    <meta name="description" content="Hotel Paraíso das Águas | Sempre sendo a melhor escolha!">
     <title>Hotel Paraíso das Águas</title>
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -25,17 +25,17 @@
                 <a href="#reserva">Faça a sua Reserva</a>
                 <a href="#contato">Contato</a>
             </div>
-
         </nav>
     </header>
 
     <main>
         <section class="img-g">
-            <div class="item">
+            <div class="item animate">
                 <h2>Bem-vindo ao Hotel Paraíso das Águas!</h2>
                 <p>A combinação perfeita de luxo e hospitalidade.</p>
             </div>
         </section>
+        
         <section class="about" id="sobre">
             <div class="about-item">
                 <div class="about-text animate">
@@ -43,9 +43,7 @@
                     <p>Com quartos elegantemente decorados e equipados com as mais modernas comodidades, garantimos uma experiência de hospedagem única. Cada detalhe é pensado para seu máximo conforto, desde as camas king size até o serviço de quarto 24 horas.</p>      
                 </div>
                 <div class="about-img">
-                    <div class="img-item animate">
-                        <img src="src/imagens/room-large.jpg" alt="Quarto do Hotel">
-                    </div>
+                    <img src="src/imagens/room-large.jpg" alt="Quarto do Hotel">
                 </div>
             </div>
             <div class="about-item">
@@ -53,20 +51,19 @@
                     <h2>Lazer e Bem-Estar</h2>
                     <p>Relaxe e recarregue as energias em nosso spa de luxo, que oferece uma variedade de tratamentos terapêuticos. Aproveite também nossa academia equipada com os mais modernos aparelhos e a piscina ao ar livre, ideal para um mergulho refrescante.</p>      
                 </div>
-                <div class="about-img">
-                    <div class="img-item animate">
-                        <img src="src/imagens/pool-medium.jpg" alt="Piscina do Hotel">
-                    </div>
+                <div class="about-img ">
+                    <img src="src/imagens/pool-medium.jpg" alt="Piscina do Hotel">
                 </div>
             </div>
         </section>
+
         <section class="location" id="localizacao">
-            <div class="location-text">
+            <div class="location-text animate">
                 <h2>Localização Privilegiada</h2>
                 <p>Situado em uma localização privilegiada, o Hotel Paraíso das Águas está próximo das principais atrações turísticas, centros de compras e áreas de negócios da cidade, proporcionando facilidade de acesso para todos os hóspedes.</p>      
             </div>
-            <div>
-                <iframe class="responsive-iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3980.7950408323463!2d-32.44669332639237!3d-3.8541193438217456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6364dff104530a3%3A0x258f9c83f7471d2!2sPraia%20do%20Sancho!5e0!3m2!1spt-BR!2sbr!4v1721008380266!5m2!1spt-BR!2sbr"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <div class="map">
+                <iframe class="responsive-iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3980.7950408323463!2d-32.44669332639237!3d-3.8541193438217456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6364dff104530a3%3A0x258f9c83f7471d2!2sPraia%20do%20Sancho!5e0!3m2!1spt-BR!2sbr!4v1721008380266!5m2!1spt-BR!2sbr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>  
         </section>
     </main>
