--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <div class="nav-links">
                 <a href="#sobre">Sobre</a>
                 <a href="#localizacao">Localização</a>
-                <a href="#reserva">Faça a sua Reserva</a>
                 <a href="#contato">Contato</a>
+                <a href="#reserva">Reservar</a>
             </div>
         </nav>
     </header>
@@ -59,7 +59,7 @@
 
         <section class="location" id="localizacao">
             <div class="location-text animate">
-                <h2>Localização Privilegiada</h2>
+                <h2> <i class="fas fa-map-location-dot"></i> Localização Privilegiada</h2>
                 <p>Situado em uma localização privilegiada, o Hotel Paraíso das Águas está próximo das principais atrações turísticas, centros de compras e áreas de negócios da cidade, proporcionando facilidade de acesso para todos os hóspedes.</p>      
             </div>
             <div class="map">
