--- a/index.html
+++ b/index.html
@@ -27,7 +27,25 @@
             </div>
         </nav>
     </header>
+    <!--
+    Claro! Aqui estão algumas fontes que podem ser ótimas para um site de hotel:
 
+    Lora – Uma fonte serifada elegante e legível, ótima para dar um toque clássico e sofisticado ao seu site.
+
+    Playfair Display – Outra fonte serifada, com um estilo mais moderno, ideal para títulos e elementos de destaque.
+
+    Montserrat – Uma fonte sans-serif moderna e limpa, perfeita para textos e navegação.
+
+    Raleway – Fonte sans-serif elegante que combina bem com outros estilos de fontes.
+
+    Open Sans – Uma fonte sans-serif legível e versátil, adequada para textos longos e descrições.
+
+    Poppins – Fonte sans-serif com um toque contemporâneo, boa para criar uma sensação de modernidade e clareza.
+
+    Merriweather – Serifada, é excelente para melhorar a legibilidade em textos longos e criar uma sensação de confiança e profissionalismo.
+
+Você pode encontrar essas fontes no Google Fonts, que é uma ótima plataforma para incorporar fontes de forma fácil e rápida no seu site.
+    -->
     <main>
         <section class="img-g">
             <div class="item animate">
@@ -59,12 +77,20 @@
 
         <section class="location" id="localizacao">
             <div class="location-text animate">
-                <h2> <i class="fas fa-map-location-dot"></i> Localização Privilegiada</h2>
+                <h2><i class="fas fa-map-location-dot"></i> Localização Privilegiada</h2>
                 <p>Situado em uma localização privilegiada, o Hotel Paraíso das Águas está próximo das principais atrações turísticas, centros de compras e áreas de negócios da cidade, proporcionando facilidade de acesso para todos os hóspedes.</p>      
             </div>
             <div class="map">
                 <iframe class="responsive-iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3980.7950408323463!2d-32.44669332639237!3d-3.8541193438217456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6364dff104530a3%3A0x258f9c83f7471d2!2sPraia%20do%20Sancho!5e0!3m2!1spt-BR!2sbr!4v1721008380266!5m2!1spt-BR!2sbr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>  
+        </section>
+
+        <section id="reserve">
+            <div id="formplace">
+                <div>
+                    Adicionar um formulário atrativo para que seja possível à realização da reserva do cliente...
+                </div>
+            </div>
         </section>
     </main>
 
