footer added and logo update

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Hotel Paraíso das Águas | Sempre sendo a melhor escolha!">
     <title>Hotel Paraíso das Águas</title>
-    <link rel="shortcut icon" href="src/imagens/logo_favicon.jfif" type="image/x-icon">
+    <link rel="shortcut icon" href="src/imagens/logo_favicon_no_bg_circled.png" type="image/x-icon">
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
     <header>
         <nav>
-            <div class="nav-logo">
+            <div class="nav-title">
                 <h1>Hotel Paraíso das Águas</h1>
             </div>
             
@@ -31,9 +31,9 @@
 
     <main>
         <section class="img-g">
-            <div class="item animate">
-                <h2>Bem-vindo ao Hotel Paraíso das Águas!</h2>
-                <p>A combinação perfeita de luxo e hospitalidade.</p>
+            <div class="slogan animate">
+                <h2>Bem-vindo</h2>
+                <p>A combinação perfeita de luxo e hospitalidade em um só lugar.</p>
             </div>
         </section>
         
@@ -60,7 +60,7 @@
 
         <section class="location" id="localizacao">
             <div class="location-text animate">
-                <h2><i class="fas fa-map-location-dot mapIcon"></i> Localização Privilegiada</h2>
+                <h2><i class="fas fa-map-location-dot "></i> Localização Privilegiada</h2>
                 <p>Situado em uma localização privilegiada, o Hotel Paraíso das Águas está próximo das principais atrações turísticas, centros de compras e áreas de negócios da cidade, proporcionando facilidade de acesso para todos os hóspedes.</p>      
             </div>
             <div class="map">
@@ -108,7 +108,30 @@
     </main>
 
     <footer>
-        Footer aqui
+        <div>
+            <img src="src/imagens/logo_favicon_no_bg_circled.png" alt="" width="250">
+            <h2>Hotel Paraíso das Águas</h2>
+        </div>
+        <div>
+            <h2>Contato</h2>
+            <ul>
+                <li>(41) 3450-0601</li>
+                <li>contato@hotelpda.com.br</li>
+                <li>suporte@hotelpda.com.br</li>
+                <li>Rua São Celestino N 95</li>
+            </ul>
+        </div>
+        <div>
+            <ul class="social-media">
+                <li><i class="fa-brands fa-instagram"><a href="#"></a></i></li>
+                <li><i class="fa-brands fa-facebook-f"><a href="#"></a></i></li>
+                <li><i class="fa-brands fa-x-twitter"><a href="#"></a></i></li>
+                <li><i class="fa-brands fa-linkedin-in"><a href="#"></a></i></li>
+                <li><i class="fa-brands fa-threads"><a href="#"></a></i></li>
+            </ul>
+
+            <small>&copy; Feito por <a href="https://juancorreadesaribas.github.io/" target="_blank" rel=" noopener author">Juan Correa</a></small>
+        </div>
     </footer>
 
     <script src="src/js/script.js"></script>
