--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
                     <input type="date" name="check-out" id="check-out" required>
                 </div>
 
+                <div>
+                    <input type="submit" value="Pesquisar">
+                </div>
             </div> 
             
         </section>
