please ignore oldStyle

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <div class="footer-logo">
                 <h2>Hotel Paraíso das Águas</h2>
                 <img src="src/imagens/logo_favicon_no_bg_circled.png" alt="" width="200">
-                <p class="tagline">Your Oasis of Relaxation</p> <!-- Added tagline -->
+                <p class="tagline"></p> <!-- Added tagline -->
             </div>
 
         </div>
@@ -146,10 +146,10 @@
                     <li><i class="fa-solid fa-phone"></i> (41) 3450-0601</li> <!-- Added icon -->
                     <li><i class="fa-solid fa-envelope"></i> contato@hotelpda.com.br</li> <!-- Added icon -->
                     <li><i class="fa-solid fa-envelope"></i> suporte@hotelpda.com.br</li> <!-- Added icon -->
-                    <li><i class="fa-solid fa-location-dot"></i> Rua São Celestino N 95</li> <!-- Added icon -->
+                    <li><i class="fa-solid fa-location-dot"></i> Rua São Celestino Nº 95</li> <!-- Added icon -->
                     <li><i class="fa-brands fa-whatsapp"></i> WhatsApp: (41) 91234-5678</li> <!-- Added WhatsApp -->
                 </ul>
-                <p class="operating-hours"><i class="fa-solid fa-clock"></i> Operating Hours: Mon-Sun, 8 AM - 10 PM</p> <!-- Added operating hours -->
+                <p class="operating-hours"><i class="fa-solid fa-clock"></i> Horário de funcionamento: Segunda-Sábado, 8:30 - 20:00</p>
             </div>
         </div>
         <div class="footer-item">
