--- a/index.html
+++ b/index.html
@@ -158,8 +158,9 @@
                 <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
                 <li><a href="#"><i class="fa-brands fa-threads"></i></a></li>
             </ul>
-            <a href="#" class="newsletter-signup">Sign up for our newsletter</a> <!-- Added newsletter signup -->
-            <a href="#" class="special-offers">Check out our special offers!</a> <!-- Added special offers link -->
+            <!--
+            <a href="#" class="newsletter-signup">Sign up for our newsletter</a>  Added newsletter signup 
+            <a href="#" class="special-offers">Check out our special offers!</a>  Added special offers link -->
         </div>
         <small>&copy; Todos os direitos reservados <br> Desenvolvido por <a href="https://juancorreadesaribas.github.io/" target="_blank" rel="noopener author">Juan Correa de Sá Ribas</a>  </small>
     </footer>
