--- a/index.html
+++ b/index.html
@@ -68,17 +68,15 @@
         </section>
         <section class="about" id="sobre">
             <div class="about-item">
-                <div class="about-text animate">
+                <div class="about-text">
                     <h1>Sobre o Hotel</h1>
                     <p>Descubra o Paraíso das Águas, um refúgio perfeito para relaxar e renovar suas energias. Desfrute de acomodações confortáveis, vistas deslumbrantes e um atendimento impecável. Seja para uma escapada romântica ou férias em família, aqui você encontrará a tranquilidade e o conforto que merece. Reserve já! lor</p>      
                 </div>
-                <div class="about-img">
-                    <img src="src/imagens/pexels-asman-chema-91897-594077.jpg" alt="Quarto do Hotel">
-                </div>
+            <div class="about-img">
+
+                <img src="src/imagens/pexels-habi-dompil-1539296-2964163.jpg" alt="">
             </div>
-            <div class="about-item">
-                
-            </div>
+
         </section>
         
         <section class="location" id="localizacao">
