--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <a href="#" class="newsletter-signup">Sign up for our newsletter</a>  Added newsletter signup 
             <a href="#" class="special-offers">Check out our special offers!</a>  Added special offers link -->
         </div>
-        <small>&copy; Todos os direitos reservados <br> Desenvolvido por <a href="https://juancorreadesaribas.github.io/" target="_blank" rel="noopener author">Juan Correa de Sá Ribas</a>  </small>
+        <small>&copy; Todos os direitos reservados <br> Desenvolvido por <a href="https://github.com/JuanCorreadeSaRibas" target="_blank" rel="noopener author">  Juan Correa de Sá Ribas</a> <i class="fa-brands fa-github"></i> </small>
     </footer>
     
     <script defer src="src/js/script.js"></script>
