--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <a href="#sobre">Sobre</a>
                 <a href="#localizacao">Localização</a>
                 <a href="#contato">Contato</a>
-                <a href="#reserva">Reservar</a>
+                <a href="#reserve">Reservar</a>
             </div>
         </nav>
     </header>
