update imgs names

--- a/index.html
+++ b/index.html
@@ -73,8 +73,11 @@
                     <p>Descubra o Paraíso das Águas, um refúgio perfeito para relaxar e renovar suas energias. Desfrute de acomodações confortáveis, vistas deslumbrantes e um atendimento impecável. Seja para uma escapada romântica ou férias em família, aqui você encontrará a tranquilidade e o conforto que merece. Reserve já! lor</p>      
                 </div>
             <div class="about-img">
+                <picture>
+                    <source media="(max-width: 600px)" srcset="src/imagens/s-pool.jpg">
 
-                <img src="src/imagens/pexels-habi-dompil-1539296-2964163.jpg" alt="">
+                    <img src="src/imagens/l-pool.jpg" alt="">
+                </picture>
             </div>
 
         </section>
