sei la oq eu fiz

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <picture>
                     <source media="(max-width: 600px)" srcset="src/imagens/s-pool.jpg">
 
-                    <img src="src/imagens/l-pool.jpg" alt="">
+                    <img src="src/imagens/hotel.jpg" alt="">
                 </picture>
             </div>
 
@@ -85,7 +85,7 @@
         <section class="location" id="localizacao">
             <div class="location-text">
                 <h2><i class="fas fa-map-location-dot "></i> Localização Privilegiada</h2>
-                <p>Situado em uma localização privilegiada, o Hotel Paraíso das Águas está próximo das principais atrações turísticas, centros de compras e áreas de negócios da cidade, proporcionando facilidade de acesso para todos os hóspedes.</p>      
+                <p>Situado em uma localização privilegiada, o Hotel Paraíso das Águas está próximo das principais atrações turísticas, centros de compras e áreas de negócios da cidade, proporcionando facilidade de acesso para todos os hóspedes.</p>     
             </div>
             <div class="map">
                 <iframe class="responsive-iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3980.7950408323463!2d-32.44669332639237!3d-3.8541193438217456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6364dff104530a3%3A0x258f9c83f7471d2!2sPraia%20do%20Sancho!5e0!3m2!1spt-BR!2sbr!4v1721008380266!5m2!1spt-BR!2sbr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
