section#about update

--- a/index.html
+++ b/index.html
@@ -72,14 +72,43 @@
                     <h1>Sobre o Hotel</h1>
                     <p>Descubra o Paraíso das Águas, um refúgio perfeito para relaxar e renovar suas energias. Desfrute de acomodações confortáveis, vistas deslumbrantes e um atendimento impecável. Seja para uma escapada romântica ou férias em família, aqui você encontrará a tranquilidade e o conforto que merece. Reserve já! lor</p>      
                 </div>
-            <div class="about-img">
-                <picture>
-                    <source media="(max-width: 600px)" srcset="src/imagens/s-pool.jpg">
+                <div class="about-img">
+                    <picture>
+                        <source media="(max-width: 600px)" srcset="src/imagens/s-pool.jpg">
 
-                    <img src="src/imagens/hotel.jpg" alt="">
-                </picture>
+                        <img src="src/imagens/hotel.jpg" alt="">
+                    </picture>
+                </div>
             </div>
-
+            <div class="facilities">
+                <h2>Nós oferecemos</h2>
+                <div class="facil-container">
+                    <div class="facil-item">
+                        <i class="fas fa-swimming-pool"></i>
+                        <p>Piscina</p>
+                    </div>
+                    <div class="facil-item">
+                        <i class="fas fa-wifi"></i>
+                        <p>Wi-fi Grátis</p>
+                    </div>
+                    <div class="facil-item">
+                        <i class="fas fa-spa"></i>
+                        <p>Spa</p>
+                    </div>
+                    <div class="facil-item">
+                        <i class="fas fa-square-parking"></i>
+                        <p>Estacionamento</p>
+                    </div>
+                    <div class="facil-item">
+                        <i class="fas fa-coffee"></i>
+                        <p>Café da manhã</p>
+                    </div>
+                    <div class="facil-item">
+                        <i class="fas fa-gamepad"></i>
+                        <p>Sala de jogos</p>
+                    </div>
+                </div>
+            </div>
         </section>
         
         <section class="location" id="localizacao">
@@ -88,7 +117,7 @@
                 <p>Situado em uma localização privilegiada, o Hotel Paraíso das Águas está próximo das principais atrações turísticas, centros de compras e áreas de negócios da cidade, proporcionando facilidade de acesso para todos os hóspedes.</p>     
             </div>
             <div class="map">
-                <iframe class="responsive-iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3980.7950408323463!2d-32.44669332639237!3d-3.8541193438217456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6364dff104530a3%3A0x258f9c83f7471d2!2sPraia%20do%20Sancho!5e0!3m2!1spt-BR!2sbr!4v1721008380266!5m2!1spt-BR!2sbr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe class="responsive-iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14692.455730672265!2d-43.21793577177802!3d-22.98283753322829!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bd523d20f9c53%3A0x693c6132635e6b0d!2sCopacabana%2C%20Rio%20de%20Janeiro%20-%20RJ!5e0!3m2!1spt-BR!2sbr!4v1726435224936!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>  
         </section>
         
