--- a/index.html
+++ b/index.html
@@ -82,32 +82,33 @@
             </div>
             <div class="facilities">
                 <h2>Nós oferecemos</h2>
-                <div class="facil-container">
+                <div class="facil-container" id="facilities">
                     <div class="facil-item">
-                        <i class="fas fa-swimming-pool"></i>
+                        <i class="fas fa-swimming-pool" id="swimming-pool"></i>
                         <p>Piscina</p>
                     </div>
                     <div class="facil-item">
-                        <i class="fas fa-wifi"></i>
+                        <i class="fas fa-wifi" id="wifi"></i>
                         <p>Wi-fi Grátis</p>
                     </div>
                     <div class="facil-item">
-                        <i class="fas fa-spa"></i>
+                        <i class="fas fa-spa" id="spa"></i>
                         <p>Spa</p>
                     </div>
                     <div class="facil-item">
-                        <i class="fas fa-square-parking"></i>
+                        <i class="fas fa-square-parking" id="parking"></i>
                         <p>Estacionamento</p>
                     </div>
                     <div class="facil-item">
-                        <i class="fas fa-coffee"></i>
+                        <i class="fas fa-coffee" id="breakfast"></i>
                         <p>Café da manhã</p>
                     </div>
                     <div class="facil-item">
-                        <i class="fas fa-gamepad"></i>
+                        <i class="fas fa-gamepad" id="games"></i>
                         <p>Sala de jogos</p>
                     </div>
                 </div>
+                
             </div>
         </section>
         
