--- a/index.html
+++ b/index.html
@@ -83,29 +83,36 @@
             <div class="facilities">
                 <h2>Nós oferecemos</h2>
                 <div class="facil-container" id="facilities">
-                    <div class="facil-item">
-                        <i class="fas fa-swimming-pool" id="swimming-pool"></i>
+                    <div class="facil-item" id="pool">
+                        <i class="fas fa-swimming-pool" ></i>
                         <p>Piscina</p>
+                        <p>Oferecemos uma piscina grande para dias de sol</p>
                     </div>
-                    <div class="facil-item">
-                        <i class="fas fa-wifi" id="wifi"></i>
+                    <div class="facil-item" id="wifi">
+                        <i class="fas fa-wifi"></i>
                         <p>Wi-fi Grátis</p>
+                        <p>Nosso Wi-fi pega em todo o espaço</p>
                     </div>
-                    <div class="facil-item">
-                        <i class="fas fa-spa" id="spa"></i>
+                    <div class="facil-item" id="spa">
+                        <i class="fas fa-spa" ></i>
                         <p>Spa</p>
+                        <p>Todo mundo merece um Spa como esse...</p>
                     </div>
-                    <div class="facil-item">
-                        <i class="fas fa-square-parking" id="parking"></i>
+                    <div class="facil-item" id="parking">
+                        <i class="fas fa-square-parking" ></i>
                         <p>Estacionamento</p>
+                        <p>O estacionamento é espaçoso e seguro para todos os veículos.</p>
                     </div>
-                    <div class="facil-item">
-                        <i class="fas fa-coffee" id="breakfast"></i>
+                    <div class="facil-item" id="coffee">
+                        <i class="fas fa-coffee" ></i>
                         <p>Café da manhã</p>
+                        <p>O nosso café da manhã é realmente divino, nem os maiores reis poderiam ter</p>
                     </div>
-                    <div class="facil-item">
-                        <i class="fas fa-gamepad" id="games"></i>
+                    <div class="facil-item" id="games">
+                        <i class="fas fa-gamepad" ></i>
                         <p>Sala de jogos</p>
+                        <p>Um pouco de diversão? Por que não?</p>
+
                     </div>
                 </div>
                 
