não gostei mto não

--- a/index.html
+++ b/index.html
@@ -83,35 +83,35 @@
             <div class="facilities">
                 <h2>Nós oferecemos</h2>
                 <div class="facil-container" id="facilities">
-                    <div class="facil-item" id="pool">
-                        <i class="fas fa-swimming-pool" ></i>
-                        <p>Piscina</p>
-                        <p>Oferecemos uma piscina grande para dias de sol</p>
+                    <div class="facil-item" >
+                        <i class="fas fa-swimming-pool" id="pool"></i>
+                        <h4>Piscina</h4>
+                        <!--<h4 class="info">Oferecemos uma piscina grande para dias de sol</h4>-->
                     </div>
-                    <div class="facil-item" id="wifi">
-                        <i class="fas fa-wifi"></i>
-                        <p>Wi-fi Grátis</p>
-                        <p>Nosso Wi-fi pega em todo o espaço</p>
+                    <div class="facil-item" >
+                        <i class="fas fa-wifi" id="wifi"></i>
+                        <h4>Wi-fi Grátis</h4>
+                        <!--<h4 class="info">Nosso Wi-fi pega em todo o espaço</h4>-->
                     </div>
-                    <div class="facil-item" id="spa">
-                        <i class="fas fa-spa" ></i>
-                        <p>Spa</p>
-                        <p>Todo mundo merece um Spa como esse...</p>
+                    <div class="facil-item" >
+                        <i class="fas fa-spa" id="spa"></i>
+                        <h4>Spa</h4>
+                        <!--<h4 class="info">Todo mundo merece um Spa como esse...</h4>-->
                     </div>
-                    <div class="facil-item" id="parking">
-                        <i class="fas fa-square-parking" ></i>
-                        <p>Estacionamento</p>
-                        <p>O estacionamento é espaçoso e seguro para todos os veículos.</p>
+                    <div class="facil-item" >
+                        <i class="fas fa-square-parking" id="parking"></i>
+                        <h4>Estacionamento</h4>
+                        <!--<h4 class="info">O estacionamento é espaçoso e seguro para todos os veículos.</h4>-->
                     </div>
-                    <div class="facil-item" id="coffee">
-                        <i class="fas fa-coffee" ></i>
-                        <p>Café da manhã</p>
-                        <p>O nosso café da manhã é realmente divino, nem os maiores reis poderiam ter</p>
+                    <div class="facil-item" >
+                        <i class="fas fa-coffee" id="coffee"></i>
+                        <h4>Café da manhã</h4>
+                        <!--<h4 class="info">O nosso café da manhã é realmente divino, nem os maiores reis poderiam ter</h4>-->
                     </div>
-                    <div class="facil-item" id="games">
-                        <i class="fas fa-gamepad" ></i>
-                        <p>Sala de jogos</p>
-                        <p>Um pouco de diversão? Por que não?</p>
+                    <div class="facil-item" >
+                        <i class="fas fa-gamepad" id="games"></i>
+                        <h4>Sala de jogos</h4>
+                        <!--<p class="info">Um pouco de diversão? Por que não?</p>-->
 
                     </div>
                 </div>
